--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="상단바 로고.png"/>
 
-  <title>BSC-QUIZ</title>
+  <title>ctf</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "701331451";
+    const serviceWorkerVersion = "2476321215";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
